[gd_scene load_steps=8 format=3 uid="uid://dqa8rxawmxury"]

[ext_resource type="Script" path="res://scripts/player_character.gd" id="1_7l4d3"]
[ext_resource type="Texture2D" uid="uid://c2d8a63b3bjpg" path="res://PlayerCharacterAnimSheet.png" id="2_4tf22"]
[ext_resource type="PackedScene" uid="uid://box1scf2vxfjk" path="res://scenes/bullet.tscn" id="2_q0rbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vxtsg"]
atlas = ExtResource("2_4tf22")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpkfm"]
atlas = ExtResource("2_4tf22")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_27a0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxtsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpkfm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qficp"]
radius = 17.0

[node name="PlayerCharacter" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_7l4d3")
time_btw_shots = 0.1
bullet_scenes = Array[PackedScene]([ExtResource("2_q0rbb")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_27a0s")
animation = &"idle"
frame = 1
frame_progress = 0.274438

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_qficp")

[node name="BulletOriginPoint" type="Marker2D" parent="."]
position = Vector2(0, -19)

[connection signal="aim_activated" from="." to="." method="_on_aim_activated"]
[connection signal="strike_started" from="." to="." method="_on_strike_started"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
